// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render base info correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="product-card"
  >
    <div
      data-testid="product-card:info"
    >
      <div
        class="root image-overlay"
      >
        <a
          class="image-link"
          data-testid="product-info:image-link"
          href="https://www.products.com/some-product"
        >
          <img
            class="image"
            data-testid="product-info:image"
            src="https://www.images.com/some-product/1"
          />
        </a>
      </div>
      <div
        class="prices height-limit"
        data-testid="product-info:prices"
      >
        <span
          class="root price"
          data-testid="product-info:price"
        >
          23 476,23 $
        </span>
        <span
          class="root old-price crossed-out"
          data-testid="product-info:old-price"
        >
          25 000 $
        </span>
      </div>
      <a
        class="link link line-clamp basic-gray87"
        data-testid="product-info:name-link"
        href="https://www.products.com/some-product"
      >
        Some product
      </a>
    </div>
  </div>
</div>
`;

exports[`ProductCard should render hover card correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="product-card"
  >
    <div
      data-testid="product-card:info"
    >
      <div
        class="root image-overlay"
      >
        <a
          class="image-link"
          data-testid="product-info:image-link"
          href="https://www.products.com/some-product"
        >
          <img
            class="image"
            data-testid="product-info:image"
            src="https://www.images.com/some-product/1"
          />
        </a>
      </div>
      <div
        class="prices height-limit"
        data-testid="product-info:prices"
      >
        <span
          class="root price"
          data-testid="product-info:price"
        >
          23 476,23 $
        </span>
        <span
          class="root old-price crossed-out"
          data-testid="product-info:old-price"
        >
          25 000 $
        </span>
      </div>
      <a
        class="link link line-clamp basic-gray87"
        data-testid="product-info:name-link"
        href="https://www.products.com/some-product"
      >
        Some product
      </a>
    </div>
    <div
      class="root card shadow-z4 rounds-md__all"
      data-testid="product-card:hover-card"
      style="z-index: 1;"
    >
      <div
        class="root image-overlay"
      >
        <a
          class="image-link"
          data-testid="product-info:image-link"
          href="https://www.products.com/some-product"
        >
          <img
            class="image"
            data-testid="product-info:image"
            src="https://www.images.com/some-product/1"
            style="opacity: 1;"
          />
        </a>
      </div>
      <div
        class="prices height-limit"
        data-testid="product-info:prices"
      >
        <span
          class="root price"
          data-testid="product-info:price"
        >
          23 476,23 $
        </span>
        <span
          class="root old-price crossed-out"
          data-testid="product-info:old-price"
        >
          25 000 $
        </span>
      </div>
      <a
        class="link link line-clamp basic-gray87"
        data-testid="product-info:name-link"
        href="https://www.products.com/some-product"
      >
        Some product
      </a>
      <div
        class="footer"
        data-testid="product-info:footer"
      >
        <div
          class="control-wrapper"
        >
          <div
            class="control"
          >
            <button
              class="root size-m view-primary"
              data-testid="button"
            >
              В корзину
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
